dark mode style fixes

--- a/src/app/global/tech-bar-chart/tech-bar-chart.component.scss
+++ b/src/app/global/tech-bar-chart/tech-bar-chart.component.scss
@@ -1,4 +1,3 @@
 :host {
-  width: 100vw;
   display: flex;
 }
