--- a/src/assets/styles/_pages.scss
+++ b/src/assets/styles/_pages.scss
@@ -91,7 +91,7 @@
     }
 
     svg {
-      fill: var(--text-color);
+      fill: white;
     }
   }
 }
