--- a/src/assets/styles/global/_filter.scss
+++ b/src/assets/styles/global/_filter.scss
@@ -29,6 +29,7 @@
       border: 0;
       border-radius: 0;
       margin: 0;
+      mix-blend-mode: difference;
     }
 
     @include tablet {
