--- a/src/assets/styles/global/_mixins.scss
+++ b/src/assets/styles/global/_mixins.scss
@@ -7,6 +7,7 @@
   background-image: url('../../img/#{$name}');
   background-attachment: fixed;
   background-size: $size;
+  filter: sepia(var(--header-image-sepia)) brightness(var(--header-image-brightness));
 
   @if($no-repeat) {
     background-repeat: no-repeat;
@@ -257,16 +258,8 @@
     border: 0;
     border-radius: 0;
     margin: 0 1rem 0 0;
+    mix-blend-mode: difference;
   }
-
-  // &:hover {
-  //   color: var(--text-color);
-  //   border-bottom: 1px dotted var(--secondary-color);
-  // }
-
-  // &:visited {
-  //   border-bottom: 1px dotted var(--secondary-color);
-  // }
 }
 
 @mixin read-more {
