--- a/src/assets/styles/global/_table.scss
+++ b/src/assets/styles/global/_table.scss
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: .125rem 0;
+    padding: .125rem 1rem 0 1rem;
     grid-column-start: 1;
     border-style: solid;
     border-color: transparent;
