--- a/src/assets/styles/pages/_about.scss
+++ b/src/assets/styles/pages/_about.scss
@@ -166,8 +166,9 @@
 .about-stub {
   text-align: left;
   margin: 2rem 0 0 0;
-  padding-top: 1rem;
   @include about-list();
+  border-bottom: 1px dotted var(--secondary-color);
+  padding-bottom: 2rem;
 
   p {
     margin: 0;
@@ -210,6 +211,7 @@
     img {
       margin-top: 0;
       margin-left: 0.25rem;
+      mix-blend-mode: difference;
 
       @include tablet {
         @include mobile-image();
