--- a/src/assets/styles/pages/_github.scss
+++ b/src/assets/styles/pages/_github.scss
@@ -46,7 +46,7 @@
             padding-top: 1rem;
 
             svg {
-                fill: white;
+                fill: var(--text-color);
                 margin-right: .75rem;
             }
 
